# IoT_IBI_Tracking

./: .gitignore  CLAUDE.md  mmwave_ibi_hrv_research_note.md  pyproject.toml  revised_project_proposal.md
dashboard/: app.py  figures.py  state.py
dashboard/assets/: style.css
data/: DataCaptureDemo_xWR.lua  README.md
data/pipeline_synthetic/: metrics.json
docs/: algorithm_references.md  python_interface_setup.md  teammate_handoff.md
docs/superpowers/plans/: 2026-04-22-single-user-mmwave-ibi-hrv.md
docs/superpowers/specs/: 2026-04-22-single-user-mmwave-ibi-hrv-design.md
polarSetup/: PolarSetup.txt  polar_h10_record_macos.py  polar_h10_record_windows.py  polar_h10_setup.md
radar_analysis/: __init__.py  beat_detection.py  chest_bin_selection.py  heartbeat_extractors.py  hrv_metrics.py  phase_processing.py  pipeline.py  radar_config.py  reader.py  replay.py  streams.py  synthetic.py
scripts/: _demo_realistic.py  _smoke_test.py  batch_eval_distance.py  batch_eval_results.csv  batch_eval_summary.txt  eval_multirx_svd.py  eval_multirx_svd_summary.txt  eval_vmd_acf.py  eval_vmd_acf_summary.txt  hrv_live.py  inspect_capture.py  quick_phase.py  reprocess_and_eval.py  reprocess_summary.txt  run_dashboard.py  run_pipeline.py
tests/: test_beat_detection.py  test_chest_bin_selection.py  test_dashboard_figures.py  test_dashboard_state.py  test_heartbeat_extractors.py  test_hrv_metrics.py  test_phase_processing.py  test_pipeline.py  test_replay.py  test_streams.py  test_synthetic.py
