[project]
name = "radar-analysis"
version = "0.1.0"
description = "Offline analysis of IWR1443 + DCA1000 captures (Mac side)"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "dash>=2.17",
    "plotly>=5.22",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["radar_analysis*"]
